--- a/index.html
+++ b/index.html
@@ -1,29 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Exercise</title>
+  <title>Ottonova</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <!--Bootstrap-->
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <script src="./js/jquery.min.js"></script>
+  <script src="./js/popper.min.js"></script>
+  <script src="./js/bootstrap.min.js"></script>
+  <!--for datepicker-->
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="css/external.css">
+
   <script>
-  var request = new XMLHttpRequest();
-        request.open("GET", "./json/dates.json", false);
-        request.overrideMimeType("application/json");
-        request.send(null);
-        var jsonData = JSON.parse(request.responseText);
-        console.log(jsonData);
-  </script>
+    // Read the JSON file
+  let request = new XMLHttpRequest();
+      request.open("GET", "./json/dates.json", false);
+      request.overrideMimeType("application/json");
+      request.send(null);
+  var jsonData = JSON.parse(request.responseText);
+  const allDates= jsonData['result'].map((dates)=> {
+        let date = new Date(dates['start']);
+        return date.getUTCDate() + "-" + (date.getUTCMonth() + 1) + "-" + date.getUTCFullYear(); // xx.getUTCMonth() + 1 because months 1-12
+  });
+  const distinctDates = [...new Set(allDates)];
+
+    // Jquery datepicker 
+    $(document).ready(function(){
+      var enableDays = distinctDates;
+      function enableAllTheseDays(date) {
+          var sdate = $.datepicker.formatDate( 'd-m-yy', date);
+          if($.inArray(sdate, enableDays) != -1) {
+              return [true];
+          }
+          return [false];
+      }
+      $('#datepicker').datepicker({dateFormat: 'dd-mm-yy', beforeShowDay:enableAllTheseDays});
+  });
+
+// After choosing the date
+function filterTimes(selected){
+const time_list = jsonData['result'].reduce((array, dates)=>{
+  let date_start = new Date(dates['start']);
+  let date_end = new Date(dates['end']);
+      let date = date_start.getUTCDate() + "-" + (date_start.getUTCMonth() + 1) + "-" + date_start.getUTCFullYear();
+      let start_min = (date_start.getUTCMinutes())?date_start.getUTCMinutes():'00';
+      let end_min = (date_end.getUTCMinutes())?date_end.getUTCMinutes():'00';
+      let timeList = date_start.getUTCHours()+ ":"+start_min+ '-'+date_end.getUTCHours()+ ":"+end_min;
+      if(selected === date){
+        array.push(timeList);
+      }
+      return array;
+  },[]).map(time=>`<option value="${time}">${time}</option>`);
+
+  // Create time list
+  if(time_list.length>0){
+      let items = `<label for="time">Select time:</label>
+                  <select required name="time" class="form-control" placeholder="Enter email" id="time">
+                  <option value="">Select time</option>`;
+
+      for(let list in time_list){
+        items += time_list[list];
+      }
+      items += `</select>`;
+      document.getElementById('timeFiling').innerHTML = items;
+  }
+}
+</script>
 
 </head>
 <body>
-
-<div class="container">
-  <h1>My First Bootstrap Page</h1>
-  <p>This is some text.</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-4 cal-sm-12"></div>
+    <section class="col-md-4 cal-sm-12">
+      <div class="jumbotron">
+        <h1>Ottonova</h1>      
+        <p> Appointment Booking Online</p>
+      </div>
+      <section class="section-preview">
+          <form action="#">
+            <div class="form-group">
+                <div class="form-check-inline">
+                  <label class="form-check-label" for="male">
+                    <input type="radio" class="form-check-input" id="male" name="optradio" value="option1" checked>Male
+                  </label>
+                </div>
+                <div class="form-check-inline">
+                  <label class="form-check-label" for="female">
+                    <input type="radio" class="form-check-input" id="female" name="optradio" value="option2">Female
+                  </label>
+                </div>
+            </div>
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input required type="text" class="form-control" placeholder="Your Name" id="name">
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input required type="email" class="form-control" placeholder="Enter email" id="email">
+            </div>
+            <div class="form-group">
+              <label for="datepicker">Possible timeslots:</label>
+              <input required type="text" id="datepicker" class="form-control" placeholder="Select Date" onchange="filterTimes(this.value);">
+            </div>
+            <div class="form-group" id="timeFiling">
+            </div>
+            <div class="form-group form-check">
+              <label class="form-check-label">
+                <input class="form-check-input" type="checkbox"> I am allowing ottonova to contact me for further questions.
+              </label>
+            </div>
+            <button type="button" class="btn btn-primary">Submit</button>
+          </form>
+        </section>
+      </div>
+    <div class="col-md-4 cal-sm-12"></div>
+  </div>
 </div>
-
+<script src="./js/validation.js"></script>
 </body>
 </html>
+
+
+
+
